fixed project overlays to not overflow in IE
took out padding and made links inline blocks to fix overflow in IE

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -246,11 +246,10 @@ a{
 
 .hovereffect a {
 	text-decoration: underline;
+	display: inline-block;
 }
 .hovereffect a, .hovereffect p {
   color: #FFF;
-  padding: 5px 0;
-  padding: 1vh 0;
   font-size: medium;
   opacity: 0;
   filter: alpha(opacity=0);
